# mcp-zero-trust-layer

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  constraints.txt  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  publish-container.yml  publish.yml
deploy/: docker-compose.prod.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
docs/: MULTI_MCP_USE_CASES.md  PRODUCTION.md  PYPI_RELEASE.md
examples/filesystem-safe/: mcpzt.yaml
examples/github-readonly/: mcpzt.yaml
examples/multi-mcp/: mcpzt.yaml
examples/oidc-gateway/: mcpzt.yaml
examples/postgres-readonly/: mcpzt.yaml
examples/protected-http-upstream/: mcpzt.yaml
src/mcp_zero_trust_layer/: __init__.py  client_import.py  errors.py
src/mcp_zero_trust_layer/approvals/: __init__.py  models.py  notifier.py  store.py  ui.py
src/mcp_zero_trust_layer/audit/: __init__.py  logger.py  search.py
src/mcp_zero_trust_layer/capabilities/: __init__.py  discovery.py  filtering.py  mapping.py  onboarding.py
src/mcp_zero_trust_layer/cli/: main.py
src/mcp_zero_trust_layer/config/: __init__.py  loader.py  models.py  secrets.py
src/mcp_zero_trust_layer/core/: __init__.py  context.py  pipeline.py
src/mcp_zero_trust_layer/identity/: __init__.py  auth.py  models.py
src/mcp_zero_trust_layer/observability/: metrics.py
src/mcp_zero_trust_layer/output/: __init__.py  enforcer.py
src/mcp_zero_trust_layer/packs/: __init__.py  filesystem-safe.yaml  github-readonly.yaml  registry.py  (+1 more)
tests/integration/: test_approvals.py  test_http_runtime.py  test_multi_mcp_use_cases.py  test_stdio_wrapper.py
tests/unit/: test_approval_store.py  test_approvals_ui.py  test_audit_redaction.py  test_audit_search.py  test_auth.py  test_capability_discovery.py  test_capability_filtering.py  test_cli.py  test_client_import.py  test_config.py  test_http_upstream.py  test_jsonrpc.py  test_onboarding.py  test_output_enforcer.py  test_package_metadata.py  test_packs.py  test_policy_analysis.py  test_policy_engine.py  test_validators.py
(+24 files in other folders)
