[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-zero-trust-layer"
version = "0.1.2"
description = "Open-source, self-hosted Zero Trust policy enforcement layer for MCP servers."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "MCP Zero Trust Layer Contributors" }
]
keywords = ["mcp", "security", "zero-trust", "policy", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
license-files = ["LICENSE"]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "PyJWT[crypto]>=2.10",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "ruff>=0.5",
  "twine>=6.0"
]
http = []

[project.scripts]
mcpzt = "mcp_zero_trust_layer.cli.main:app"
mcp-zero-trust-layer = "mcp_zero_trust_layer.cli.main:app"

[project.urls]
Homepage = "https://github.com/686f6c61/mcp-zero-trust-layer"
Documentation = "https://github.com/686f6c61/mcp-zero-trust-layer/tree/main/docs"
Issues = "https://github.com/686f6c61/mcp-zero-trust-layer/issues"
Source = "https://github.com/686f6c61/mcp-zero-trust-layer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_zero_trust_layer = ["py.typed", "packs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*"
]

[tool.ruff]
line-length = 100
target-version = "py311"
